--- a/src/PrintStruk.css
+++ b/src/PrintStruk.css
@@ -30,9 +30,15 @@
     margin-top:1px;
     margin-bottom: 1px;
 }
+
 .kanan {
     text-align: right;
-    margin-top: 0px;
+    margin-left: 50px;
+    /* margin-left: 0px; */
+}
+.kiri { 
+    text-align: left;
+    margin: 0px;
 }
 .kanan1 {
     text-align: right;
@@ -44,52 +50,25 @@
     margin-left: 8px;
     /* width: auto; */
 }
-.kiri { 
-    text-align: left;
-}
+
 .kiriitem { 
     text-align: left;
     /* width: auto; */
 }
 .parent {
-    height: 300px;
-    display: flex;
-    /* justify-content: center; */
-    border: 1px solid red;
-    /* justify-items: end; */
+    /* border: 1px solid #fff; */
+    padding: 0px;
   }
   .childkiri {
-    /* margin: 0px; */
-    border: 1px solid green;
-    text-align: left;
+    width: 50%;
+    float: left;
+    padding: 0px;
+    /* border: 1px solid red; */
   }
   .childkanan {
-    text-align: right;
-    border: 1px solid green;
-    justify-items: end;
+    width: 50%;
+    float: right;
+    padding: 0px;
+    
   }
-
-
-/* .columns {
-    Width: 100%;
-    }
-    .column {
-      width:100%;
-    }
-@media (min-width: 48em) {
-      .column {
-        width: 50%;
-        float:left;
-      }
-      .columns {
-        content: "";
-        display: table;
-        clear: both;
-      }
-} */
-/* .h2 {
-    font-weight: normal; 
-    text-align: center; 
-    margin-top: 0px; 
-    margin-bottom:0px;
-} */
+ 
